<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Poli-Socially</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_geolocation_button">Main Geolocation Button</string>
    <string name="zip_code_entry">Zip Code Entry</string>
    <string name="all_politiican_data_courtesy_of_sunlight_labs_">All politiican data courtesy of Sunlight Labs.</string>
    <string name="about_app">&lt;b&gt;Poli-Socially&lt;b&gt; by Scott Caruso. Copyright 2013. All rights reserved. Images and data courtesy of Sunlight Labs. Maps and City data provided by Google, Inc.</string>
    <string name="about">About</string>
    <string name="placeholder_map">placeholder_map</string>
    <string name="politiican_name">Politician Name</string>
    <string name="party">Party</string>
    <string name="age">Age</string>
    <string name="hometown">Hometown</string>
    <string name="follow">Follow</string>
    <string name="call">Phone</string>
    <string name="politician_picture">Politician Picture</string>
    <string name="tweet">Tweet</string>
    <string name="debug_advance_to_next_screen">DEBUG: Advance To Next Screen</string>
    <string name="change_district">Change District</string>
    <string name="posts">posts</string>
    <string name="login">Login</string>
    <string name="update_status">Update Status</string>
    <string name="get_timeline">Get Timeline</string>
    <string name="logout">Logout</string>
    <string name="user_name">User Name</string>
    <string name="sign_in_to_view_tweets">Sign In To View Tweets</string>
    <string name="politician_image">politician image</string>
    <string name="politician_name">Politician Name</string>
    <string name="party_name">Party Name</string>
    <string name="post_to_facebook">Facebook</string>
    <string name="visit_website">Website</string>
    <string name="birthday">Birthday</string>
    <string name="term_end">Term End</string>
    <string name="govtrack_id">GovTrack</string>
    <string name="placeholder">Placeholder</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="tap_here_to_view">Tap Here To View</string>
    <string name="npr_news">NPR News</string>
    <string name="state">State</string>
    <string name="delete_button">delete button</string>
    <string name="description">View and manage your saved politicians from this screen. Tap the X to remove a politician from favorites, or tap anywhere else on the politician to view his or her details.</string>
    <string name="view_favorites">View Favorites</string>

</resources>
