<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".Main_Screen" >

   <RelativeLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal" >

	    <ImageButton
	        android:id="@+id/imageButton1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_marginTop="80dp"
	        android:contentDescription="@string/main_geolocation_button"
	        android:src="@drawable/main_button" />

	  	<Button
	  	    android:id="@+id/favesButton"
	  	    style="?android:attr/buttonStyleSmall"
	  	    android:layout_width="wrap_content"
	  	    android:layout_height="wrap_content"
	  	    android:layout_alignParentBottom="true"
	  	    android:layout_centerHorizontal="true"
	  	    android:text="@string/view_favorites" />

	  	<Button
	  	    android:id="@+id/zipButton"
	  	    style="?android:attr/buttonStyleSmall"
	  	    android:layout_width="wrap_content"
	  	    android:layout_height="wrap_content"
	  	    android:layout_below="@+id/imageButton1"
	  	    android:layout_centerHorizontal="true"
	  	    android:layout_marginTop="18dp"
	  	    android:text="@string/zip_code_entry" />

    </RelativeLayout>

   <TextView
       android:id="@+id/textView1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="35dp"
       android:layout_gravity="bottom"
       android:text="@string/all_politiican_data_courtesy_of_sunlight_labs_" />
        
</LinearLayout>
